# sectalks

./: .gitignore  .gitmodules  HallOfFame.md  HallOfFame.txt  LICENSE  README.md  Weekend_reads.txt  readme.md  readme.txt
SYD0x25/: SecTalks SYD0x25- Wireless client side attacks.pptx
ctf-solutions/: README.txt  readme.md  readme.txt
ctf-solutions/BER0x03/: write-up.md
ctf-solutions/LON0x02/: README.md  byteshift.c  exec-hoi.c  exec-krl.c  exec-nuo.c  exec-qxr.c  exec-tau.c  maketau.c  sample-hoi.c  sample-krl.c  sample-nuo.c  sample-qxr.c  sample-tau.c  shiftexec.c
ctf-solutions/LON0x08/: README.md  challenge.html  image.py  wtf.txt
ctf-solutions/LON0x0d/: Archive.md  JS2.md
ctf-solutions/LON0x20/: taw.md
ctf-solutions/LON0x27/: README.md
ctf-solutions/LON0x2A/: README.md
ctf-solutions/NN0x04/: README.md
ctf-solutions/NN0x07/: README.md
ctf-solutions/SYD0x0e/: readme.md
ctfs/: encoder.c
ctfs/0x01/: readme.txt  supercomputer
ctfs/0x02/: readme.txt  supercomputer.crack.100.percent.working.not.malware.arj
ctfs/0x03/: README
ctfs/0x04/: README
ctfs/0x05/: README.txt
ctfs/0x06/: README  hints.txt  sectalks_ctf_0x06.7z
ctfs/BER0x00/: README.md  base-64-is-great.html  iframe.html  (+10 more)
ctfs/NN0x04/uae/: BUILD.bazel  Dockerfile  challenge.libsonnet  init.py  run.sh
ctfs/NN0x04/uae/src/: requirements.txt  wsgi.py
ctfs/NN0x04/uae/src/WEB-INF/: web.xml
ctfs/NN0x04/uae/src/app/: __init__.py  mss.py  routes.py  uaerunner.py  uaeutils.py
ctfs/NN0x04/uae/src/app/templates/: edit.html  error.html  flag.html  landing.html  login.html  manage.html
ctfs/NN0x04/uae/src/app/uaeruntime/: README.md  __init__.py  _version.py  asteval.py  astutils.py
ctfs/NN0x04/uae/src/java/com/adamyi/uae/: UaeRuntimeWrapper.java
ctfs/NN0x04/uae/tomcat/: .gitignore  ROOT.xml  server.xml
talks/: readme.txt
(+592 files in other folders)
